--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -88,10 +88,8 @@
                         </div>
                     </div>
                     <div class="row d-flex w-100 mt-5 ">
-                        <button type="submit" class="btn btn-primary m-auto" onclick="updateDataFilter()">Apply Filter</button>
+                        <button type="submit" class="btn btn-primary m-auto" >Apply Filter</button>
                     </div>
-                    
-
                 </div>
                 </form>
             </div>
