--- a/views/partials/transactionPartial.hbs
+++ b/views/partials/transactionPartial.hbs
@@ -7,8 +7,8 @@
                 <div class="col-2 hidden"><a id="headeruserphone" class="listHeader " href="?order=userphone_asc">User's phone</a></div>
                 <div class="col-2"><a id="headerbusid" class="listHeader" href="?order=busid_asc">Bus ID</a></div>
                 <div class="col-2 hidden"><a id="headerlicensePlate" class="listHeader " href="?order=licensePlate_asc">License Plate</a></div>
-                <div class="col-2"><a id="headerprice" class="listHeader" href="?order=price_asc">Price</a></div>
-                <div class="col-2">Status</div>
+                <div class="col-2"><a id="headerprice" class="listHeader" href="?order=price_asc">Total</a></div>
+                <div class="col-2"><a id="headerstatus" class="listHeader" href="?order=status_asc">Status</a></div>
         </div>
         <div class="b3-content-containter overflow-hidden">
                 {{#each Transactions}}
@@ -30,9 +30,9 @@
                                         data-target="#modal{{@index}}">{{Chuyen.Xe.bienso}}</a></div>
                                         
                         <div class="priceData col-2"><a class="cursor-pointer" data-toggle="modal"
-                                        data-target="#modal{{@index}}">{{getTotal Chuyen.gia TransactionDetails KhuyenMai}}</a></div>
-                        <div class="col-2">
-                                {{#if (checkStatus createdAt)}}
+                                        data-target="#modal{{@index}}">${{getTotal Chuyen.gia TransactionDetails KhuyenMai}}</a></div>
+                        <div class="statusData col-2">
+                                {{#if (checkStatus PaymentDetailId)}}
                                 <a href="#" data-toggle="tooltip" title="Used" data-placement="right"
                                         style="cursor:default">
                                         <i class="fas fa-check-circle" style="color:#56C568"></i>
@@ -145,14 +145,11 @@
                                                                         <div class="col-lg-3 col-sm-4 lighter-text">
                                                                                 Total Price</div>
                                                                         <div class="col-lg-3 col-sm-6">{{getTotal Chuyen.gia TransactionDetails KhuyenMai}}</div>
-                                                                </div>
-                                                                <div class="row">
-
                                                                         <div class="col-lg-3 col-sm-4 lighter-text">
                                                                                 Status
                                                                         </div>
                                                                         <div class="col-lg-3 col-sm-6">
-                                                                                {{#if (checkStatus createdAt)}}
+                                                                                {{#if (checkStatus PaymentDetailId)}}
                                                                                 <a href="#" data-toggle="tooltip"
                                                                                         title="Used"
                                                                                         data-placement="right"
@@ -170,10 +167,29 @@
                                                                                 </a>
                                                                                 {{/if}}
                                                                         </div>
+                                                                </div>
+                                                                <div class="row">
+                                                                        <div class="col-lg-3 col-sm-4 lighter-text">
+                                                                                Payment ID
+                                                                        </div>
+                                                                        <div class="col-lg-6 col-sm-6">{{PaymentDetail.PaymentId}}
+                                                                        </div>
+                                                                </div>
+                                                                <div class="row">
+                                                                        <div class="col-lg-3 col-sm-4 lighter-text">
+                                                                                Payer ID
+                                                                        </div>
+                                                                        <div class="col-lg-6 col-sm-6">{{PaymentDetail.PayerId}}
+                                                                        </div>
+
+                                                                </div>
+                                                                <div class="row">
+
+                                                                        
                                                                         <div class="col-lg-3 col-sm-4 lighter-text">
                                                                                 Payment Time
                                                                         </div>
-                                                                        <div class="col-lg-3 col-sm-6">{{createdAt}}
+                                                                        <div class="col-lg-3 col-sm-6">{{getDay createdAt}} {{getTime createdAt}}
                                                                         </div>
 
                                                                 </div>
