--- a/views/transaction.hbs
+++ b/views/transaction.hbs
@@ -41,15 +41,15 @@
                         <div class="row ml-0 mr-0">
                             <div class="col-6 pl-0 pr-2 input-date">
                                 <!-- <label class="form-check-label" for="bday">From</label> -->
-                                <input placeholder="From" id="transactionFrom" type="text"
-                                    class="datepicker-here my-date-time-picker form-control" data-language='en' name='transaction_min'
+                                <input placeholder="From" id="transactionFrom" type="text" value="{{getTime transactionRange 0}}"
+                                    class="datepicker-here my-date-time-picker form-control" data-language='en' name='transaction_min' autocomplete="off"
                                     data-timepicker="true" data-position="bottom left" />
                                 <i class="far fa-calendar-alt icon-date mr-3"></i>
                             </div>
                             <div class="col-6 pr-0 pl-2 input-date">
                                 <!-- <label class="form-check-label ml-3" for="bday">To</label> -->
-                                <input placeholder="To" id="transactionTo" type="text"
-                                    class="datepicker-here my-date-time-picker form-control" data-language='en' name='transaction_max'
+                                <input placeholder="To" id="transactionTo" type="text" value="{{getTime transactionRange 1}}"
+                                    class="datepicker-here my-date-time-picker form-control" data-language='en' name='transaction_max' autocomplete="off"
                                     data-timepicker="true" data-position="bottom right" />
                                 <i class="far fa-calendar-alt icon-date mr-3"></i>
                             </div>
@@ -59,8 +59,8 @@
                                 <option value="1" class="c3-my-option">Last 24h</optionc3-my-option>
                                 <option value="3"  class="c3-my-option">Last 3 days</option>
                                 <option value="7" class="c3-my-option">Last 7 days</option>
-                                <option value="0" class="c3-my-option" selected>All time</option>
-                                <option value="-1" class="c3-my-option" hidden id="transactionCustomSelect">Custom</option>
+                                <option class="c3-my-option" value="0" {{#unless (isCustomOption transactionRange)}}selected{{/unless}} >All time</option>
+                                <option class="c3-my-option" value="-1"  {{#if (isCustomOption transactionRange)}}selected{{/if}} hidden id="transactionCustomSelect">Custom</option>
                             </select>
                         </div>
                     </div>
@@ -73,26 +73,26 @@
                         <div class="row ml-0 mr-0">
                             <div class="col-6 pl-0 pr-2 input-date">
                                 <!-- <label class="form-check-label" for="bday">From</label> -->
-                                <input placeholder="From" id="departureTimeFrom" type="text"
-                                    class="datepicker-here my-date-time-picker form-control" data-language='en' name='departure_min'
+                                <input placeholder="From" id="departureTimeFrom" type="text" value="{{getTime departureRange 0}}"
+                                    class="datepicker-here my-date-time-picker form-control" data-language='en' name='departure_min' autocomplete="off"
                                     data-timepicker="true" data-position='top left' />
                                 <i class="far fa-calendar-alt icon-date mr-3"></i>
                             </div>
                             <div class="col-6 pr-0 pl-2 input-date">
                                 <!-- <label class="form-check-label ml-3" for="bday">To</label> -->
-                                <input placeholder="To" id="departureTimeTo" type="text"
-                                    class="datepicker-here my-date-time-picker form-control" data-language='en' name='departure_max'
+                                <input placeholder="To" id="departureTimeTo" type="text" value="{{getTime departureRange 1}}"
+                                    class="datepicker-here my-date-time-picker form-control" data-language='en'  autocomplete="off"name='departure_max'
                                     data-timepicker="true" data-position='top left' />
                                 <i class="far fa-calendar-alt icon-date mr-3"></i>
                             </div>
                         </div>
                         <div class="row ml-0 mr-0 mt-3">
-                            <select class="c3-my-select" id="selectDeparture">
+                            <select class="c3-my-select" id="selectDeparture" >
                                 <option class="c3-my-option" value="1">Next 24h</option>
                                 <option class="c3-my-option" value="3">Next 3 days</option>
                                 <option class="c3-my-option" value="7">Next 7 days</option>
-                                <option class="c3-my-option" value="0" selected>All time</option>
-                                <option class="c3-my-option" value="-1" hidden>Custom</option>
+                                <option class="c3-my-option" value="0" {{#unless (isCustomOption departureRange)}}selected{{/unless}} >All time</option>
+                                <option class="c3-my-option" value="-1"  {{#if (isCustomOption departureRange)}}selected{{/if}} hidden>Custom</option>
                             </select>
 
                         </div>
@@ -102,7 +102,7 @@
                 <div id="client-filter-div" class="filter-div m-3">
                     <div class="container mt-3">
                         <label for="usr">Client's phone number</label>
-                        <input id="ticketPhone" type="tel" class="form-control" name="phone" placeholder="Phone" data-mask="999 999 9999" maxlength="12">
+                        <input id="ticketPhone" type="tel" class="form-control"  autocomplete="off"name="phone" placeholder="Phone" value="{{phone}}">
                     </div>
                 </div>
 
@@ -112,19 +112,19 @@
                     <div class="container mt-3">
                         <div class="row ml-0 mr-0">
                             <label for="usr">Bus's Palace Liscene</label>
-                            <input type="text" name="palaceLiscene" class="form-control" id="usr" placeholder="Palace Liscene">
+                            <input type="text" name="palaceLiscene" class="form-control" id="usr" placeholder="Palace Liscene" value="{{palaceLiscene}}">
                         </div>
 
                         <div class="row ml-0 mr-0 mt-3 d-flex align-items-center">
                             <div class="col-5 pl-0">
-                                <input type="text" class="form-control-plaintext control-inline my-inpyt-text" id="fromInput" name="from"
+                                <input type="text" class="form-control-plaintext control-inline my-inpyt-text" id="fromInput" name="from" value="{{xuatphat}}" autocomplete="off"
                                     placeholder="From">
                             </div>
                             <div class="col-1 pl-0 text-centur p-0 pl-xs-0">
-                                <i style="margin:auto 2px" class="fas fa-exchange-alt" aria-hidden="true"></i>
+                                 <i id="swapbutton" style="margin:auto 2px" class="fas fa-exchange-alt" aria-hidden="true"></i>
                             </div>
                             <div class="col-6   pl-xs-0">
-                                <input type="text"  id="toInput" name="to" class="form-control-plaintext control-inline my-inpyt-text"
+                                <input type="text"  id="toInput" name="to" class="form-control-plaintext control-inline my-inpyt-text" value="{{ketthuc}}" autocomplete="off"
                                     placeholder="To">
                             </div>
                         </div>
