--- a/public/css/c3.css
+++ b/public/css/c3.css
@@ -145,7 +145,7 @@ a {
 
 
 #bus-route {
-    padding-bottom: 46% !important
+    padding-bottom: 46% !important;
     position: relative;
     display: inline-block;
     width: 100%;
@@ -244,6 +244,20 @@ a {
     width: 95%;
 }
 
+.subtitle-donut,
+.btn-primary {
+    font-size: 14px;
+    margin-left: 50%;
+    color: #999999;
+    margin-bottom: 3px;
+}
+
+.btn-primary {
+    font-size: 12px !important;
+    color: white !important;
+    padding-top: 2px !important;
+    padding-bottom: 2px !important;
+}
 
 
 .c3-my-select {
