--- a/views/masterdata.hbs
+++ b/views/masterdata.hbs
@@ -65,7 +65,7 @@
                                             placeholder="From" autocomplete="off" name="from" id="fromInputM">
                                     </div>
                                     <div class="col-2" id="icon-trans">
-                                        <i style="margin:auto 1px" class="fas fa-exchange-alt" aria-hidden="true"></i>
+                                        <i id="swapbutton" style="margin:auto 1px" class="fas fa-exchange-alt" aria-hidden="true"></i>
                                     </div>
                                     <div class="col-5">
                                         <input type="text" class="form-control-plaintext control-inline my-inpyt-text"
