--- a/views/partials/masterDataPartial.hbs
+++ b/views/partials/masterDataPartial.hbs
@@ -18,7 +18,7 @@
                         <div class="departureData col-2  active-filter"><a class="action" href="#">
                                         <i class="far fa-circle"></i>
                                 </a>
-                                {{prettifyDate ngayGioKhoiHanh}}<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{getTime ngayGioKhoiHanh}}
+                                {{prettifyDate ngayGioKhoiHanh}}<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{getTimeC ngayGioKhoiHanh}}
                         </div>
                         <div class="minuteMovingData col-2">{{Tuyen.soPhutDiChuyen}}</div>
                         <div class="busRouteData col-2">{{Tuyen.xuatphat.ten}}-{{Tuyen.ketthuc.ten}}</div>
