--- a/views/partials/masterDataPartial.hbs
+++ b/views/partials/masterDataPartial.hbs
@@ -15,10 +15,8 @@
                 {{#each results}}
 
                 <div class="row table-content">
-                        <div class="departureData col-2  active-filter"><a class="action" href="#">
-                                        <i class="far fa-circle"></i>
-                                </a>
-                                {{prettifyDate ngayGioKhoiHanh}}<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{getTimeC ngayGioKhoiHanh}}
+                        <div class="departureData col-2  active-filter">
+                                {{prettifyDate ngayGioKhoiHanh}}<br>{{getTimeC ngayGioKhoiHanh}}
                         </div>
                         <div class="minuteMovingData col-2">{{Tuyen.soPhutDiChuyen}}</div>
                         <div class="busRouteData col-2">{{Tuyen.xuatphat.ten}}-{{Tuyen.ketthuc.ten}}</div>
@@ -28,16 +26,40 @@
                                 <a class="cursor-pointer action" data-toggle="modal" data-target="#modal{{@index}}">
                                         <i class="fas fa-eye"></i>
                                 </a>
-                                <a class="action" href="#">
+                                <a class="cursor-pointer action" data-toggle="modal" data-target="">
                                         <i class="fas fa-pen"></i>
                                 </a>
-                                <a class="action" href="#">
+                                <a class="cursor-pointer action" data-toggle="modal" data-target="#yesnoModal">
                                         <i class="fas fa-trash"></i>
                                 </a>
                         </div>
                 </div>
 
                 <hr>
+
+                <!-- YesnoModal -->
+                <div class="modal fade" id="yesnoModal" tabindex="-1" role="dialog"
+                        aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                        <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">Warning</h5>
+                                                <button type="button" class="close" data-dismiss="modal"
+                                                        aria-label="Close">
+                                                        <span aria-hidden="true">&times;</span>
+                                                </button>
+                                        </div>
+                                        <div class="modal-body">
+                                                Do you want to delete this departure?
+                                        </div>
+                                        <div class="modal-footer">
+                                                <button type="button" class="btn btn-primary btn-dark"
+                                                        data-dismiss="modal">No</button>
+                                                <a class="btn btn-primary" href="/users/masterdata/delete/{{id}}">Yes</a>
+                                        </div>
+                                </div>
+                        </div>
+                </div>
 
 
                 <div class="modal fade" id="modal{{@index}}">
@@ -63,6 +85,7 @@
                                                 </li>
                                         </ul>
 
+
                                         <!-- Modal body -->
                                         <div class="modal-body   pl-5 pb-5 pr-5">
                                                 <div class="tab-content text-left">
@@ -74,7 +97,8 @@
                                                                                 Departure ID</div>
                                                                         <div class="col-lg-3 col-sm-6">{{id}}</div>
 
-                                                                        <div class="col-lg-3 col-sm-4 lighter-text">Created at
+                                                                        <div class="col-lg-3 col-sm-4 lighter-text">
+                                                                                Created at
                                                                         </div>
                                                                         <div class="col-lg-3 col-sm-6">
                                                                                 {{prettifyDate createdAt}} -
@@ -118,7 +142,7 @@
                                                                 <hr>
 
                                                                 <div class="row">
-                                                                        
+
                                                                         <div class="col-lg-3 col-sm-4 lighter-text">
                                                                                 Bus type
                                                                         </div>
@@ -136,20 +160,22 @@
                                                                         <div class="col-lg-3 col-sm-4 lighter-text">
                                                                                 Price per slot</div>
                                                                         <div class="col-lg-3 col-sm-6">${{gia}}</div>
-                                                                        
+
                                                                 </div>
                                                                 <hr>
                                                                 <div class="row">
                                                                         <div class="col-lg-3 col-sm-4 lighter-text">
                                                                                 Saleoff ID
                                                                         </div>
-                                                                        <div class="col-lg-3 col-sm-6">{{Tuyen.KhuyenMais.0.maKhuyenMai}}
+                                                                        <div class="col-lg-3 col-sm-6">
+                                                                                {{Tuyen.KhuyenMais.0.maKhuyenMai}}
                                                                         </div>
 
-                                                                         <div class="col-lg-3 col-sm-4 lighter-text">
+                                                                        <div class="col-lg-3 col-sm-4 lighter-text">
                                                                                 Saleoff percent
                                                                         </div>
-                                                                        <div class="col-lg-3 col-sm-6">{{Tuyen.KhuyenMais.0.phanTram}}%
+                                                                        <div class="col-lg-3 col-sm-6">
+                                                                                {{Tuyen.KhuyenMais.0.phanTram}}%
                                                                         </div>
 
                                                                 </div>
@@ -157,13 +183,15 @@
                                                                         <div class="col-lg-3 col-sm-4 lighter-text">
                                                                                 Date starts saleoff
                                                                         </div>
-                                                                        <div class="col-lg-3 col-sm-6">{{getArrival Tuyen.KhuyenMais.0.ngayBatDau 0}}
+                                                                        <div class="col-lg-3 col-sm-6">
+                                                                                {{getArrival Tuyen.KhuyenMais.0.ngayBatDau 0}}
                                                                         </div>
 
                                                                         <div class="col-lg-3 col-sm-4 lighter-text">
                                                                                 Date ends saleoff
                                                                         </div>
-                                                                        <div class="col-lg-3 col-sm-6">{{getArrival Tuyen.KhuyenMais.0.ngayKetThuc 0}}
+                                                                        <div class="col-lg-3 col-sm-6">
+                                                                                {{getArrival Tuyen.KhuyenMais.0.ngayKetThuc 0}}
                                                                         </div>
 
                                                                 </div>
