create update masterdata

--- a/views/partials/masterDataPartial.hbs
+++ b/views/partials/masterDataPartial.hbs
@@ -26,8 +26,8 @@
                                 <a class="cursor-pointer action" data-toggle="modal" data-target="#modal{{@index}}">
                                         <i class="fas fa-eye"></i>
                                 </a>
-                                <a class="cursor-pointer action" data-toggle="modal" data-target="">
-                                        <i class="fas fa-pen"></i>
+                                <a class="cursor-pointer action" href="/users/masterdata/edit/{{id}}">
+                                        <i class="fas fa-pen" style="color:#26292D;"></i>
                                 </a>
                                 <a class="cursor-pointer action" data-toggle="modal" data-target="#yesnoModal">
                                         <i class="fas fa-trash"></i>
