--- a/views/masterdata.hbs
+++ b/views/masterdata.hbs
@@ -32,7 +32,7 @@
                     <div class="c3-form">
                         <h4>TOOL</h4>
                         <div class="tools">
-                            <a href="#" id="create" class="btn btn-custom">Create</a>
+                            <a href="/users/masterdata/create" id="create" class="btn btn-custom">Create</a>
                             <a href="#" id="import" class="btn btn-custom">Import</a>
                             <br>
                             <a href="#" id="export" class="btn btn-custom">Export</a>
@@ -44,16 +44,22 @@
                         <div class="c3-form">
                             <h4>FILTER</h4>
                             <div class="btn-group" id="btn-group-dropdown">
-                                <button type="button" id="btn-dropdown" class="btn btn-danger">Booking database</button>
+                                <button type="button" id="btn-dropdown" class="btn btn-danger">Departure database</button>
                                 <button type="button" id="toggle"
                                     class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-toggle="dropdown"
                                     aria-haspopup="true" aria-expanded="false">
                                     <span class="sr-only">Toggle Dropdown</span>
                                 </button>
                                 <div class="dropdown-menu dropdown-menu-right">
-                                    <a class=" dropdown-item" href="/users/masterdata">Booking database</a>
+                                    <a class=" dropdown-item" href="/users/masterdata">Departure database</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="/users/masterdata">Employee database</a>
+                                    <a class="dropdown-item" href="/users/masterdata">Busroute database</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="/users/masterdata">Saleoff database</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="/users/masterdata">Bus database</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="/users/masterdata">Bustype database</a>
                                 </div>
                             </div>
 
@@ -65,7 +71,8 @@
                                             placeholder="From" autocomplete="off" name="from" id="fromInputM">
                                     </div>
                                     <div class="col-2" id="icon-trans">
-                                        <i id="swapbutton" style="margin:auto 1px" class="fas fa-exchange-alt" aria-hidden="true"></i>
+                                        <i id="swapbutton" style="margin:auto 1px" class="fas fa-exchange-alt"
+                                            aria-hidden="true"></i>
                                     </div>
                                     <div class="col-5">
                                         <input type="text" class="form-control-plaintext control-inline my-inpyt-text"
@@ -79,7 +86,8 @@
                                 <div class="row row-custom">
                                     <div class="col-6">
                                         <div class="input-date">
-                                            <input name="departure_min" placeholder="From" id="searchform-departureday" type="text"
+                                            <input autocomplete="off" name="departure_min" placeholder="From"
+                                                id="searchform-departureday" type="text"
                                                 class="datepicker-here form-control" data-language='en'
                                                 data-multiple-dates="3" data-multiple-dates-separator=", "
                                                 data-position='top left' />
@@ -89,7 +97,8 @@
 
                                     <div class="col-6">
                                         <div class="input-date">
-                                            <input name="departure_max" placeholder="To" id="searchform-returnday" type="text"
+                                            <input name="departure_max" autocomplete="off" placeholder="To"
+                                                id="searchform-returnday" type="text"
                                                 class="datepicker-here form-control" data-language='en'
                                                 data-multiple-dates="3" data-multiple-dates-separator=", "
                                                 data-position='top left' />
@@ -103,7 +112,8 @@
                                 <h5>License Plate</h5>
                                 <div class="row row-custom">
                                     <div class="col-10">
-                                        <input name="palaceLiscene" type="text" id="bus-id" placeholder="Example: 59-B1">
+                                        <input name="palaceLiscene" type="text" id="bus-id"
+                                            placeholder="Example: 59-B1">
                                     </div>
 
                                     <div class="col-2" id="icon-search">
