--- a/views/paymentError.hbs
+++ b/views/paymentError.hbs
@@ -10,7 +10,7 @@
 
 <div class="container text-center border p-5 mt-5 mb-5">
     <h1 class="text-primary">Error</h1>
-    <h2>Please try again!</h2>
+    <h2>{{note}}</h2>
 
 </div>
 
